--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "next-connect": "^0.13.0",
     "nodemailer": "^6.7.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
